lesson13 video04 time 06:25

--- a/lesson13/like.html
+++ b/lesson13/like.html
@@ -10,6 +10,7 @@
 
 <body>
     <button class="like-button"></button>
+    <script src="./src/lib/request.js"></script>
     <script src="./src/like-button.js"></script>
     <script>
         const likeButtonElement = document.querySelector('.like-button');
