lesson13 video05 time 07:50

--- a/lesson13/gallery.html
+++ b/lesson13/gallery.html
@@ -41,10 +41,13 @@
             request({
                 url: `gallery/image${currentImage}.json`,
                 onSuccess: (imageData) => {
-                    console.log(imageData);
+                    galleryImage.src = imageData.image;
+                    galleryTitle.textContent = imageData.title;
                 }
             });
         }
+
+        renderCurrentImage();
     </script>
 </body>
 
