lesson13 video05 time 08:30

--- a/lesson13/gallery.html
+++ b/lesson13/gallery.html
@@ -47,6 +47,18 @@
             });
         }
 
+        galleryBack.addEventListener('click', () => {
+            currentImage = currentImage - 1;
+
+            renderCurrentImage();
+        });
+
+        galleryForward.addEventListener('click', () => {
+            currentImage = currentImage + 1;
+
+            renderCurrentImage();
+        });
+
         renderCurrentImage();
     </script>
 </body>
