lesson14 video04 time 15:50

--- a/lesson14/unsplash.html
+++ b/lesson14/unsplash.html
@@ -39,6 +39,7 @@
                     client_id: API_KEY,
                 },
                 onSuccess: (data) => {
+                    unsplashImage.style.background = data.color;
                     unsplashImage.src = data.urls.full;
                 }
             });
