lesson15 video03 time 06:30

--- a/lesson15/yadict.html
+++ b/lesson15/yadict.html
@@ -32,6 +32,9 @@
                 },
                 onSuccess: (data) => {
                     console.log(data);
+                    const meaning = data.def[0].tr.join(', ');
+
+                    dictMeaning.textContent = meaning;
                 }
             });
         });
