--- a/lesson15/yadict.html
+++ b/lesson15/yadict.html
@@ -32,6 +32,9 @@
             request({
                 method: 'POST',
                 url: 'https://dictionary.yandex.net/api/v1/dicservice.json/lookup',
+                headers: {
+                    'Content-type': 'application/x-www-form-urlencoded',
+                },
                 body: bodyParams.toString(),
                 onSuccess: (data) => {
                     console.log(data);
