--- a/lesson15/yadict.html
+++ b/lesson15/yadict.html
@@ -23,19 +23,15 @@
         const dictButton = dict.querySelector('.dict__button');
 
         dictButton.addEventListener('click', () => {
-            const bodyParams = new URLSearchParams({
-                key: API_KEY,
-                lang: 'ru-ru',
-                text: dictWord.value
-            });
-
             request({
                 method: 'POST',
                 url: 'https://dictionary.yandex.net/api/v1/dicservice.json/lookup',
-                headers: {
-                    'Content-type': 'application/x-www-form-urlencoded',
+                requestType: 'urlencoded',
+                body: {
+                    key: API_KEY,
+                    lang: 'ru-ru',
+                    text: dictWord.value
                 },
-                body: bodyParams.toString(),
                 onSuccess: (data) => {
                     console.log(data);
                     const meaning = data.def[0].tr.map(t => t.text).join(', ');
