lesson15 video04 time 10:40

--- a/lesson15/jsonplaceholder.html
+++ b/lesson15/jsonplaceholder.html
@@ -36,6 +36,10 @@
                 url: 'https://jsonplaceholder.typicode.com/posts',
                 requestType: 'json',
                 body: data,
+                okResponces: [201],
+                onSuccess: () => {
+                    post.textContent = 'Пост был создан!';
+                }
             });
         });
 
