--- a/lesson15/crud.html
+++ b/lesson15/crud.html
@@ -20,6 +20,7 @@
             flex-grow: 1;
         }
     </style>
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
 </head>
 
 <body>
