lesson15 video06 time 32:40

--- a/lesson15/crud.html
+++ b/lesson15/crud.html
@@ -58,9 +58,10 @@
         const userFormElement = document.querySelector('.user');
 
         const dashboard = new Dashboard(dashboardElement);
-        const userFrom = new UserForm(userFormElement);
+        const userForm = new UserForm(userFormElement);
 
-        userFrom.subscribe(dashboard.onUserFormSubmit);
+        userForm.subscribe(dashboard.onUserFormSubmit);
+        dashboard.subscribe(userForm.onPutData);
     </script>
 </body>
 
