--- a/lesson16/index.html
+++ b/lesson16/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1 class="title">jQuery</h1>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
 </body>
 
 </html>
