--- a/lesson16/index.html
+++ b/lesson16/index.html
@@ -11,6 +11,9 @@
 <body>
     <h1 class="title">jQuery</h1>
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script>
+        $('.title').text('Я научилася использовать jQuery!');
+    </script>
 </body>
 
 </html>
