--- a/lesson16/index.html
+++ b/lesson16/index.html
@@ -20,7 +20,7 @@
 
         const elem = document.querySelector('.datepicker-field');
         const datepicker = new Datepicker(elem, {
-            // ... options
+            format: 'dd.yy.yyyy',
         });
     </script>
 </body>
