--- a/lesson16/index.html
+++ b/lesson16/index.html
@@ -21,6 +21,7 @@
         const elem = document.querySelector('.datepicker-field');
         const datepicker = new Datepicker(elem, {
             format: 'dd.yy.yyyy',
+            language: 'ru',
         });
     </script>
 </body>
