--- a/lesson17/index.html
+++ b/lesson17/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./node_modules/vanillajs-datepicker/dist/css/datepicker.min.css">
+    <link rel="stylesheet" href="./node_modules/notyf/notyf.min.css">
 </head>
 
 <body>
@@ -15,6 +16,7 @@
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/vanillajs-datepicker/dist/js/datepicker.min.js"></script>
     <script src="./node_modules/vanillajs-datepicker/dist/js/locales/ru.js"></script>
+    <script src="./node_modules/notyf/notyf.min.js"></script>
     <script>
         $('.title').text('Я научилася использовать jQuery!');
 
