lesson17 video03 time 02:50

--- a/lesson17/index.html
+++ b/lesson17/index.html
@@ -18,6 +18,7 @@
     <script src="./node_modules/vanillajs-datepicker/dist/js/datepicker.min.js"></script>
     <script src="./node_modules/vanillajs-datepicker/dist/js/locales/ru.js"></script>
     <script src="./node_modules/notyf/notyf.min.js"></script>
+    <script src="./node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
     <script>
         $('.title').text('Я научилася использовать jQuery!');
 
