--- a/lesson17/index.html
+++ b/lesson17/index.html
@@ -11,6 +11,406 @@
     <link rel="stylesheet" href="./node_modules/slim-select/dist/slimselect.min.css">
     <link rel="stylesheet" href="./node_modules/pickerjs/dist/picker.min.css">
     <link rel="stylesheet" href="./node_modules/@kodie/colorfield/dist/colorfield.min.css">
+    <link rel="stylesheet" href="./node_modules/tiny-slider/dist/tiny-slider.css">
+    <style>
+        .tns-controls {
+            text-align: center;
+            margin-bottom: 10px;
+        }
+
+        .tns-controls [aria-controls] {
+            font-size: 15px;
+            margin: 0 5px;
+            padding: 0 1em;
+            height: 2.5em;
+            color: #000;
+            background: #66CCFF;
+            border-radius: 3px;
+            border: 0;
+        }
+
+        .lt-ie9 .tns-controls>[aria-controls] {
+            line-height: 2.5em;
+        }
+
+        [data-action] {
+            display: block;
+            margin: 10px auto;
+            font-size: 17px;
+            min-width: 3em;
+            text-align: center;
+            background: transparent;
+            border: 0;
+        }
+
+        .tns-controls [disabled] {
+            color: #999999;
+            background: #B3B3B3;
+            cursor: not-allowed !important;
+        }
+
+        .tns-nav {
+            text-align: center;
+            margin: 10px 0;
+        }
+
+        .tns-nav>[aria-controls] {
+            width: 9px;
+            height: 9px;
+            padding: 0;
+            margin: 0 5px;
+            border-radius: 50%;
+            background: #ddd;
+            border: 0;
+        }
+
+        .tns-nav>.tns-nav-active {
+            background: #999;
+        }
+
+        .playbutton-wrapper {
+            text-align: center;
+        }
+
+        .playbutton-wrapper button {
+            height: 34px;
+            padding: 0 10px;
+            font-size: 14px;
+            background: #fff;
+            border-radius: 3px;
+            border: 1px solid #ccc;
+            cursor: pointer;
+        }
+
+        .wrapper {
+            padding: 0 5em;
+        }
+
+        .suite-container .title,
+        .suite-container .subtitle,
+        .suite-container li {
+            padding: 5px 10px;
+        }
+
+        .suite-container li {
+            font-size: 12px;
+            line-height: 1.4;
+            background: #f5f5f5;
+        }
+
+        .suite-container .title {
+            font-size: 14px;
+            font-weight: bold;
+            background: #8acac6;
+            text-transform: capitalize;
+        }
+
+        .suite-container .subtitle {
+            font-size: 13px;
+            font-weight: bold;
+            background: #dedede;
+            text-transform: capitalize;
+        }
+
+        .suite-container .fail {
+            background: #FFADE2;
+        }
+
+        [class*="vertical"] .img {
+            padding: 30px 0;
+        }
+
+        [class*="vertical"] .img:before {
+            content: '';
+            display: inline-block;
+            width: 1px;
+            margin-right: -1px;
+            height: 100%;
+            vertical-align: middle;
+        }
+
+        [class*="vertical"] .img a {
+            display: inline-block;
+            padding: 0;
+        }
+
+        [class*="vertical"] .img-1 {
+            height: 137px;
+        }
+
+        [class*="vertical"] .img-2 {
+            height: 122px;
+        }
+
+        [class*="vertical"] .img-3 {
+            height: 143px;
+        }
+
+        [class*="vertical"] .img-4 {
+            height: 325px;
+        }
+
+        [class*="vertical"] .img-5 {
+            height: 140px;
+        }
+
+        [class*="vertical"] .img-6 {
+            height: 119px;
+        }
+
+        [class*="vertical"] .img-7 {
+            height: 223px;
+        }
+
+        [class*="vertical"] .img-8 {
+            height: 164px;
+        }
+
+        /*[class*="vertical"] p { display: none; }*/
+
+        /*.animation .img-1 { height: 137px; }
+.animation .img-2 { height: 122px; }
+.animation .img-3 { height: 143px; }
+.animation .img-4 { height: 325px; }
+.animation .img-5 { height: 140px; }
+.animation .img-6 { height: 119px; }
+.animation .img-7 { height: 223px; }
+.animation .img-8 { height: 164px; }*/
+
+        /* reset prism */
+        pre[class*="language-"] {
+            margin: 0;
+        }
+
+        /* test results */
+        .test-results {
+            line-height: 1.4;
+            padding: 20px 10%;
+            background-color: #f2f2f2;
+        }
+
+        /* go to */
+        .goto-controls {
+            margin-bottom: 10px;
+            text-align: center;
+        }
+
+        .goto-controls input,
+        .goto-controls .button {
+            display: inline-block;
+            font-size: 14px;
+            height: 2.6em;
+            line-height: 2.6;
+            padding: 0 1em;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+            vertical-align: middle;
+        }
+
+        .goto-controls input {
+            border: 1px solid #ccc;
+        }
+
+        .goto-controls .button {
+            min-width: 4em;
+            border: none;
+            color: #fff;
+            background-color: #333;
+            cursor: pointer;
+        }
+
+        /* test results */
+        .test-results {
+            line-height: 1.6;
+        }
+
+        .test-results .title {
+            font-weight: bold;
+            text-transform: capitalize;
+        }
+
+        .test-results .title:nth-child(n+2) {
+            margin-top: 1em;
+        }
+
+        .test-results [class*="item"] {
+            margin-left: 1em;
+            font-size: 0.9em;
+        }
+
+        .test-results [class*="item"] {
+            font-weight: 300;
+        }
+
+        .test-results [class*="item"]:after {
+            margin-left: 0.5em;
+        }
+
+        .test-results .item-success {
+            color: #0EB80E;
+        }
+
+        .test-results .item-success:after {
+            content: '✓';
+        }
+
+        .test-results .item-fail {
+            color: #ED1E1E;
+        }
+
+        .test-results .item-fail:after {
+            content: '✗';
+        }
+
+        .test-results .item-comment {
+            font-style: italic;
+            color: #666;
+        }
+
+        .test-results .item-notsure:after {
+            content: '？';
+        }
+
+        .test-results .item-running:after {
+            display: inline-block;
+            height: 16px;
+            content: url('../images/pinwheel.svg');
+            vertical-align: middle;
+        }
+
+        .customize-tools [hidden] {
+            display: none;
+        }
+
+
+        /* https://daneden.github.io/animate.css/ */
+        @-webkit-keyframes jello {
+
+            from,
+            11.1%,
+            to {
+                -webkit-transform: translate3d(0, 0, 0);
+                transform: translate3d(0, 0, 0);
+            }
+
+            22.2% {
+                -webkit-transform: skewX(-12.5deg) skewY(-12.5deg);
+                transform: skewX(-12.5deg) skewY(-12.5deg);
+            }
+
+            33.3% {
+                -webkit-transform: skewX(6.25deg) skewY(6.25deg);
+                transform: skewX(6.25deg) skewY(6.25deg);
+            }
+
+            44.4% {
+                -webkit-transform: skewX(-3.125deg) skewY(-3.125deg);
+                transform: skewX(-3.125deg) skewY(-3.125deg);
+            }
+
+            55.5% {
+                -webkit-transform: skewX(1.5625deg) skewY(1.5625deg);
+                transform: skewX(1.5625deg) skewY(1.5625deg);
+            }
+
+            66.6% {
+                -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg);
+                transform: skewX(-0.78125deg) skewY(-0.78125deg);
+            }
+
+            77.7% {
+                -webkit-transform: skewX(0.390625deg) skewY(0.390625deg);
+                transform: skewX(0.390625deg) skewY(0.390625deg);
+            }
+
+            88.8% {
+                -webkit-transform: skewX(-0.1953125deg) skewY(-0.1953125deg);
+                transform: skewX(-0.1953125deg) skewY(-0.1953125deg);
+            }
+        }
+
+        @keyframes jello {
+
+            from,
+            11.1%,
+            to {
+                -webkit-transform: translate3d(0, 0, 0);
+                transform: translate3d(0, 0, 0);
+            }
+
+            22.2% {
+                -webkit-transform: skewX(-12.5deg) skewY(-12.5deg);
+                transform: skewX(-12.5deg) skewY(-12.5deg);
+            }
+
+            33.3% {
+                -webkit-transform: skewX(6.25deg) skewY(6.25deg);
+                transform: skewX(6.25deg) skewY(6.25deg);
+            }
+
+            44.4% {
+                -webkit-transform: skewX(-3.125deg) skewY(-3.125deg);
+                transform: skewX(-3.125deg) skewY(-3.125deg);
+            }
+
+            55.5% {
+                -webkit-transform: skewX(1.5625deg) skewY(1.5625deg);
+                transform: skewX(1.5625deg) skewY(1.5625deg);
+            }
+
+            66.6% {
+                -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg);
+                transform: skewX(-0.78125deg) skewY(-0.78125deg);
+            }
+
+            77.7% {
+                -webkit-transform: skewX(0.390625deg) skewY(0.390625deg);
+                transform: skewX(0.390625deg) skewY(0.390625deg);
+            }
+
+            88.8% {
+                -webkit-transform: skewX(-0.1953125deg) skewY(-0.1953125deg);
+                transform: skewX(-0.1953125deg) skewY(-0.1953125deg);
+            }
+        }
+
+        .jello {
+            -webkit-animation-name: jello;
+            animation-name: jello;
+            -webkit-transform-origin: center;
+            transform-origin: center;
+        }
+
+        @-webkit-keyframes rollOut {
+            from {
+                opacity: 1;
+            }
+
+            to {
+                opacity: 0;
+                -webkit-transform: translate3d(100%, 0, 0) rotate3d(0, 0, 1, 120deg);
+                transform: translate3d(100%, 0, 0) rotate3d(0, 0, 1, 120deg);
+            }
+        }
+
+        @keyframes rollOut {
+            from {
+                opacity: 1;
+            }
+
+            to {
+                opacity: 0;
+                -webkit-transform: translate3d(100%, 0, 0) rotate3d(0, 0, 1, 120deg);
+                transform: translate3d(100%, 0, 0) rotate3d(0, 0, 1, 120deg);
+            }
+        }
+
+        .rollOut {
+            -webkit-animation-name: rollOut;
+            animation-name: rollOut;
+        }
+    </style>
 </head>
 
 <body>
@@ -56,6 +456,11 @@
         <button type="button" class="colorfield-open colorfield-value"
             data-colorfield-style-prop="background-color"></button>
     </div>
+    <div class="my-slider">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+    </div>
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/vanillajs-datepicker/dist/js/datepicker.min.js"></script>
     <script src="./node_modules/vanillajs-datepicker/dist/js/locales/ru.js"></script>
@@ -65,6 +470,7 @@
     <script src="./node_modules/maska/dist/maska.js"></script>
     <script src="./node_modules/pickerjs/dist/picker.min.js"></script>
     <script src="./node_modules/@kodie/colorfield/dist/colorfield.min.js"></script>
+    <script src="./node_modules/tiny-slider/dist/min/tiny-slider.js"></script>
     <script>
         $('.title').text('Я научилася использовать jQuery!');
 
@@ -119,6 +525,13 @@
         });
 
         colorfield();
+
+        const slider = tns({
+            container: '.my-slider',
+            items: 1,
+            slideBy: 'page',
+            autoplay: true,
+        });
     </script>
 </body>
 
